--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="index.html" class="logo link"
             ><span class="logo-blue">Web</span>Studio</a
           >
-          <ul class="header-menu list">
+          <ul class="header-menu list flex">
             <li class="actually-page">
               <a href="./index.html" class="link">Agencja </a>
             </li>
@@ -455,11 +455,52 @@
     <div class="is-hidden" data-modal>
       <div class="backdrop">
         <div class="modal">
-          <button type="button" class="icon-close-bnt" data-modal-close>
+          <button type="button" class="icon-close-bnt flex" data-modal-close>
             <svg width="11" height="11">
-              <use href="./images/icons.svg#icon-cls-bnt "></use>
+              <use href="./images/icons.svg#icon-clsbnt "></use>
             </svg>
           </button>
+
+          <div></div>
+            <form >
+              <h3 class="modal__heading">
+                Zostaw swoje dane w formularzu poniżej
+              </h3>
+
+              <label class="modal__label">
+                <svg width="12" height="12" class="modal__formicon">
+                  <use href="./images/icons.svg#icon-form-man"></use>
+                </svg>
+                Imie
+                <input type="text" class="modal__input" name="usrname" />
+              </label>
+
+              <label class="modal__label">
+                <svg width="13" height="13" class="modal__formicon">
+                  <use href="./images/icons.svg#icon-form-phone"></use>
+                </svg>
+                Telefon
+                <input type="tel" class="modal__input" name="tel"
+              /></label>
+              <label class="modal__label">
+                <svg width="15" height="12" class="modal__formicon">
+                  <use href="./images/icons.svg#icon-form-copert"></use>
+                </svg>
+                Email
+                <input type="email" class="modal__input" name="email" />
+              </label>
+              <label class="modal__label">
+                Komentarz
+                <textarea
+                  type="text"
+                  class="modal__input modal__input-comment"
+                  name="comment"
+                  placeholder="Wprowadź tekst"
+                ></textarea>
+              </label>
+              <div class="flex"><button type="submit" class="main-button">Wyślij</button></div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
