--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li>
             <a href="mailto:info@devstudio.com" class="link contact-mp"
               ><svg width="12" height="16">
-                <use href="./images/icons.svg#icon-mail-icon"></use>
+                <use href="./images/icons.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -47,7 +47,7 @@
           <li>
             <a href="tel:+48111111111" class="link contact-mp"
               ><svg width="12" height="16">
-                <use href="./images/icons.svg#icon-smartphone-icon"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +48 111 111 111</a
             >
