--- a/index.html
+++ b/index.html
@@ -522,9 +522,12 @@
                 >
                 </textarea>
               </label>
-              <label>
+              <label class="modal__terms">
                 <input type="checkbox" name="rodo" class="modal__checkbox" />
-                <span class="modal__terms">
+                <span>
+                  <svg width="16" height="15">
+                    <use href="./images/icons.svg#icon-checkbox"></use>
+                  </svg>
                   Oświadczam iż akceptuję <a href="#">Regulamin</a> i
                   <a href="#">Politykę Prywatności.</a>
                 </span>
