--- a/index.html
+++ b/index.html
@@ -519,8 +519,7 @@
                   class="modal__input modal__input-comment"
                   name="comment"
                   placeholder="Wprowadź tekst"
-                >
-                </textarea>
+                ></textarea>
               </label>
               <label class="modal__terms">
                 <input type="checkbox" name="rodo" class="modal__checkbox" />
