End 2.1- Update portfolio header und footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="header-menu list flex">
             <li class="actually-page">
-              <a href="./index.html" class="link">Agencja </a>
+              <a href="./index.html" class="link">Agencja</a>
             </li>
             <li><a href="./portfolio.html" class="link">Portfolio</a></li>
             <li><a href="#" class="link">Kontakt</a></li>
@@ -41,16 +41,17 @@
               ><svg width="12" height="16">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
-              info@devstudio.com</a
-            >
+              info@devstudio.com
+            </a>
           </li>
+
           <li>
             <a href="tel:+48111111111" class="link contact-mp"
               ><svg width="12" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
-              +48 111 111 111</a
-            >
+              +48 111 111 111
+            </a>
           </li>
         </ul>
       </div>
@@ -64,7 +65,6 @@
           </button>
         </div>
       </div>
-
       <div class="container">
         <section class="text-panel section flex">
           <ul class="list">
