--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
           <a href="index.html" class="logo link"
             ><span class="logo-blue">Web</span>Studio</a
           >
-          <ul class="header-menu list">
+          <ul class="header-menu list flex">
             <li>
-              <a href="./index.html" class="link">Agencja </a>
+              <a href="./index.html" class="link">Agencja</a>
             </li>
             <li class="actually-page">
               <a href="./portfolio.html" class="link">Portfolio</a>
@@ -40,18 +40,19 @@
           <li>
             <a href="mailto:info@devstudio.com" class="link contact-mp"
               ><svg width="12" height="16">
-                <use href="./images/icons.svg#icon-mail-icon"></use>
+                <use href="./images/icons.svg#icon-mail"></use>
               </svg>
-              info@devstudio.com</a
-            >
+              info@devstudio.com
+            </a>
           </li>
+
           <li>
             <a href="tel:+48111111111" class="link contact-mp"
               ><svg width="12" height="16">
-                <use href="./images/icons.svg#icon-smartphone-icon"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
-              +48 111 111 111</a
-            >
+              +48 111 111 111
+            </a>
           </li>
         </ul>
       </div>
@@ -268,64 +269,77 @@
       </ul>
     </main>
     <footer class="footer-standard">
-      <div class="container">
-        <ul class="list footer-list">
-          <li>
-            <div class="footer-wrapper">
-              <a href="/index.html" class="footer-logo link"
-                ><span class="footer-web">Web</span>Studio</a
+      <div class="container flex flex-footer">
+        <div class="footer-wrapper">
+          <a href="/index.html" class="footer-logo link"
+            ><span class="footer-web">Web</span>Studio
+          </a>
+          <address>
+            <p class="building-address link">
+              Warszawa, Aleje Jerozolimskie 21
+            </p>
+            <p class="contacts">
+              <a href="mailto:info@example.com" class="link"
+                >info@devstudio.com</a
               >
-              <address>
-                <p class="building-address link">
-                  Warszawa, Aleje Jerozolimskie 21
-                </p>
-                <p class="contacts">
-                  <a href="mailto:info@example.com" class="link"
-                    >info@devstudio.com</a
-                  >
-                </p>
-                <p class="contacts">
-                  <a href="tel:+48111111111" class="link">+48 111 111 111</a>
-                </p>
-              </address>
-            </div>
-          </li>
-          <li>
-            <div class="join-to-us">
-              <h5>DOŁĄCZ DO NAS</h5>
-              <ul class="person-panel-socials list">
-                <li>
-                  <div class="footer-socials_border flex">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
-                  </div>
-                </li>
-                <li>
-                  <div class="footer-socials_border flex">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
-                  </div>
-                </li>
-                <li>
-                  <div class="footer-socials_border flex">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
-                  </div>
-                </li>
-                <li>
-                  <div class="footer-socials_border flex">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin-1 "></use>
-                    </svg>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+            </p>
+            <p class="contacts">
+              <a href="tel:+48111111111" class="link">+48 111 111 111</a>
+            </p>
+          </address>
+        </div>
+
+        <div class="join-to-us">
+          <h5>DOŁĄCZ DO NAS</h5>
+          <ul class="person-panel-socials list">
+            <li>
+              <div class="footer-socials_border flex">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="footer-socials_border flex">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="footer-socials_border flex">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="footer-socials_border flex">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin-1 "></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <form class="newsletter">
+          <label
+            ><h5 class="newsletter__heading">Zapisz się do newslettera</h5>
+            <input
+              type="email"
+              class="newsletter__input"
+              name="email"
+              id="newsletter"
+              placeholder="E-mail"
+          /></label>
+          <button type="submit" class="main-button newsletter__button">
+            Zapisz się
+            <svg width="24" height="24" class="newsletter__icon">
+              <use href="./images/icons.svg#icon-newsletter"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
