--- a/index.html
+++ b/index.html
@@ -468,18 +468,16 @@
     <div class="is-hidden" data-modal>
       <div class="backdrop">
         <div class="modal">
-          <button type="button" class="icon-close-bnt flex" data-modal-close>
-            <svg width="11" height="11">
-              <use href="./images/icons.svg#icon-clsbnt "></use>
-            </svg>
-          </button>
-
           <div>
             <form>
+              <button type="reset" class="icon-close-bnt flex" data-modal-close>
+                <svg width="11" height="11">
+                  <use href="./images/icons.svg#icon-clsbnt "></use>
+                </svg>
+              </button>
               <h3 class="modal__heading">
                 Zostaw swoje dane w formularzu poniżej
               </h3>
-
               <label class="modal__label">
                 <svg width="12" height="12" class="modal__icon">
                   <use href="./images/icons.svg#icon-form-man"></use>
