--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
                 Imie
                 <input
                   type="text"
+                  minlength="4"
                   class="modal__input"
                   name="usrname"
                   id="usrname"
@@ -496,7 +497,12 @@
                   <use href="./images/icons.svg#icon-form-phone"></use>
                 </svg>
                 Telefon
-                <input type="tel" class="modal__input" name="tel" id="tel"
+                <input
+                  type="tel"
+                  class="modal__input"
+                  name="tel"
+                  id="tel"
+                  pattern="[0-9]{9}"
               /></label>
               <label class="modal__label">
                 <svg width="15" height="12" class="modal__icon">
